# xyz

./: .env.e2e.example  .env.example  .env.staging.example  .gitignore  AGENTS.md  KNOWLEDGE_REVIEW.md  README.md  docker-compose.deterministic.yml  docker-compose.e2e.yml  docker-compose.fault.yml  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  playwright.staging.config.ts
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/prompts/: CHECKSUMS.json
backend/scripts/: check_workers.py  gate11_advice_smoke.py  gate11_recommendation_smoke.py  gate3_quiz_pool_smoke.py  gate3_quiz_smoke.py  gate3_smoke.py  gate7_glossary_smoke.py  gate86a_homework_smoke.py  gate86b_examprep_smoke.py  gate86c_time_management_smoke.py  gate8_assistant_smoke.py  reconcile_gamification.py  reenqueue_summaries.py  release.sh  reseed_dev_modules.py  seed_progress_demo.py
backend/tests/: conftest.py  test_12b_visibility_gate.py  test_12e_load_perf.py  test_admin.py  test_alembic_url.py  test_analytics_api.py  test_analytics_assessment.py  test_analytics_inactivity_activity.py  test_analytics_risk.py  test_analytics_section_visibility.py  test_assistant.py  test_assistant_grounding.py  test_assistant_modes.py  test_assistant_workspace.py  test_auth.py  test_bootstrap_identities.py  test_brief_from_detailed.py  test_config.py  test_content.py  test_db_engine_builder.py  test_db_spine.py  test_dev_reseed.py  test_error_envelope.py  (+59 more)
(+1162 files in other folders)
