[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz-lms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "pydantic[email]>=2.0,<3.0",
    "pgvector>=0.3,<0.5",
    "PyJWT[crypto]>=2.10,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "PyYAML>=6.0,<7.0",
    "redis>=5.0,<6.0",
    "rq>=2.0,<3.0",
    "sentence-transformers>=3.3,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "supabase>=2.0,<3.0",
    "tzdata>=2024.1",
    "uuid6>=2024.7.10,<2025.0.0",
    "uvicorn[standard]>=0.30,<1.0",
    "webvtt-py>=0.5.1,<0.6.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8.0,<9.0",
    "pytest-anyio>=0.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
